# iot-dashboard

./: .eslintignore  .eslintrc.cjs  .example.env  .gitignore  .prettierrc  CHANGELOG.md  LICENSE.md  README.md  node-red_flow.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  vite.config.ts
microcontrollers/lights/: boot.py  main.py
microcontrollers/temp/: boot.py
microcontrollers/temp/lib/install-1.3.5.dist-info/: RECORD
microcontrollers/temp/lib/micropython_ahtx0-0.1.1.dist-info/: METADATA  RECORD
mqtt-iots/lights/: config.py  webrepl_cfg.py
mqtt-iots/temp/: config.py  main.py
mqtt-iots/temp/lib/ujson-5.8.0.dist-info/: RECORD
pb_data/: data.db  logs.db  logs.db-shm  logs.db-wal
pb_migrations/: 1680696136_created_temperatures.js  1680696153_created_humidity.js  1680698209_updated_temperatures.js  1680700071_created_persons.js
pocketbase/: CHANGELOG.md
pocketbase/pb_data/: data.db  logs.db  logs.db-shm  logs.db-wal
pocketbase/pb_migrations/: 1715784182_created_tasks.js  1715784185_updated_users.js  1715784493_created_messages.js  1715784775_updated_tasks.js  1715785086_updated_users.js  1715798414_updated_users.js
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  splashscreen.html  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/network/assets/: ieee-oui.csv
src-tauri/network/src/: lib.rs  utils.rs  vendor.rs
src-tauri/src/: cmd.rs  lib.rs  main.rs
src/lib/: AddDevice.svelte  AddPerson.svelte  Alert.svelte  Climate.svelte  Device.svelte  DeviceStats.svelte  Devices.svelte  GraphCard.svelte  LightsControl.svelte  Navbar.svelte  NetworkData.svelte  Person.svelte  Titlebar.svelte  Weather.svelte  WelcomeCard.svelte  config.ts  messages.js  mqtt.ts  store.js
src/lib/api/: AuthAPI.ts  DevicesAPI.ts  LightsAPI.js  LightsAPI.ts  MQTTAPI.ts  NetworkAPI.ts  PersonsAPI.ts  TemperatureAPI.ts  WeatherAPI.ts  index.ts  mqtt-api.ts
src/lib/chart-options/: humidity.ts  network-traffic.ts  temperature.ts
src/lib/chart_options/: humidity.ts  index.ts  networkTraffic.ts  psi.ts  temperature.ts
src/lib/components/: Alert.svelte  Content.svelte  Controls.svelte  Device.svelte  Navbar.svelte  NetworkDevices.svelte  Person.svelte  SelectInterface.svelte  WeatherCard.svelte  WelcomeCard.svelte  index.js  index.ts
src/lib/config/: config.ts  index.ts  keys.ts  mqtt.conf.ts  websocket.conf.ts
src/lib/constants/: initialSettings.ts
src/lib/graph/: Charts.svelte  GraphCard.svelte
src/lib/graph-components/: Charts.svelte  GraphCard.svelte
src/lib/helpers/: imageUrl.helper.ts  index.ts  input.helper.ts  inputHelper.ts  storage.helper.ts  storageHelper.ts
src/lib/messages/: loading.ts
src/lib/modals/: SettingsModal.svelte
src/lib/services/: WebsocketService.ts  index.ts
src/lib/stores/: devices.js  devices.ts  index.ts  sensors.js  sensors.ts  settings.js  settings.store.ts  settings.ts  store.js  store.ts  ui.store.ts  ui.ts  users.store.ts
src/lib/types/: api.type.ts  devices.type.ts  helpers.type.ts  index.ts  network.type.ts  pocketbase.type.ts  settings.type.ts  stores.type.ts
src/lib/utils/: PlaceholderData.ts  chartOptionsGenerator.ts  climateWebSocket.ts  index.ts  lightsWebSocket.ts  pocketbase.ts  store.js
src/routes/: +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/splashscreen.html/: +page.svelte
(+54 files in other folders)
