[package]
name = "app"
version = "0.1.0"
description = "Office Dashboard"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "window-center", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-title", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.10.0"   
cidr-utils = "0.5.10"
gcd = "2.3.0"
itertools = "0.9.0"
log = "0.4.17"
rand = "0.7.3"
rlimit = "0.8.3"
serde_derive = "1.0.159"
shell-words = "1.1.0"
structopt = "0.3.26"
subprocess = "0.2.9"
toml = "0.5.11"
trust-dns-resolver = "0.19.7"
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
which = "4.4.0"
default-net = "0.14.1"
libc = "0.2.141"
windows = "0.29.0"

[dev-dependencies]
wait-timeout = "0.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
