[package]
name = "app"
version = "0.1.0"
description = "Office Dashboard"
authors = ["you"]
license = "MIT/Apache-2.0"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
gtk = "0.18"
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.10.0"
cidr-utils = "0.5.10"
gcd = "2.3.0"
itertools = "0.9.0"
log = "0.4.17"
rand = "0.7.3"
rlimit = "0.8.3"
serde_derive = "1.0.159"
shell-words = "1.1.0"
structopt = "0.3.26"
subprocess = "0.2.9"
toml = "0.5.11"
trust-dns-resolver = "0.19.7"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
which = "4.4.0"
libc = "0.2.141"
windows = "0.29.0"
systemstat = "0.2.3"
netdev = "0.25.0"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-cli = { version = "2.0.0-beta.4" }

[dev-dependencies]
wait-timeout = "0.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
